Added functionality for change password. closes #29

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -12,25 +12,25 @@
             </ul>
             <h3>Change Password</h3>
 
-            <form class="needs-validation" novalidate th:action="@{/user/changePass}" th:object="${formPassword}" method="POST" action="#">
+            <form class="needs-validation" novalidate th:action="@{/user/changePassword}" th:object="${formPassword}" method="POST" action="#">
                 <div th:if="${#fields.hasErrors()}">
                     <span>Please correct the problems below and resubmit.</span>
                 </div>
                 <div class="form-group">
                     <label for="currentPassword">Current Password:</label>
-                    <input type="text" th:field="*{currentPassword}" class="form-control" id="currentPassword" placeholder="enter current password" /><!--required-->
+                    <input type="password" th:field="*{currentPassword}" class="form-control" id="currentPassword" placeholder="enter current password" /><!--required-->
                     <div class="invalid-feedback">Please fill out this field.</div>
                     <span th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}">current password Error</span>
                 </div>
                 <div class="form-group">
                     <label for="newPassword">New Password:</label>
-                    <input type="text" th:field="*{password}" class="form-control" id="newPassword" placeholder="enter new password" /><!--required-->
+                    <input type="password" th:field="*{password}" class="form-control" id="newPassword" placeholder="enter new password" /><!--required-->
                     <div class="invalid-feedback">Please fill out this field.</div>
                     <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">new password Error</span>
                 </div>
                 <div class="form-group">
                     <label for="newPasswordConfirm">Confirm New Password:</label>
-                    <input type="text" th:field="*{matchingPassword}" class="form-control" id="newPasswordConfirm" placeholder="confirm new password" /><!--required-->
+                    <input type="password" th:field="*{matchingPassword}" class="form-control" id="newPasswordConfirm" placeholder="confirm new password" /><!--required-->
                     <div class="invalid-feedback">Please fill out this field.</div>
                     <span th:if="${#fields.hasErrors('matchingPassword')}" th:errors="*{matchingPassword}">confirm password Error</span>
                 </div>
