--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -47,7 +47,7 @@
                                             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">My FirstMarket</a><!--id="navbardrop"-->
                                             <div class="dropdown-menu">
                                                 <a class="dropdown-item" th:href="@{/user/editProfile}">Edit Profile</a>
-                                                <a class="dropdown-item" th:href="@{/user/changePass}">Change Password</a>
+                                                <a class="dropdown-item" th:href="@{/user/changePassword}">Change Password</a>
                                                 <a class="dropdown-item" th:href="@{/user/cart}">View Cart</a>
                                                 <a class="dropdown-item" th:href="@{/user/purchases}">My Purchases</a>
                                             </div>
