Added custom format, externalized on fragments.html, to backend validation errors on changePassword.html and newUser.html

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -12,30 +12,54 @@
             </ul>
             <h3>Change Password</h3>
 
-            <form class="needs-validation" novalidate th:action="@{/user/changePassword}" th:object="${formPassword}" method="POST" action="#">
-                <div th:if="${#fields.hasErrors()}">
-                    <span>Please correct the problems below and resubmit.</span>
-                </div>
+            <!-- BACKEND-ONLY VALIDATION -->
+
+            <form th:action="@{/user/changePassword}" th:object="${formPassword}" method="POST" action="#">
                 <div class="form-group">
                     <label for="currentPassword">Current Password:</label>
-                    <input type="password" th:field="*{currentPassword}" class="form-control" id="currentPassword" placeholder="enter current password" /><!--required-->
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                    <span th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}">current password Error</span>
+                    <input type="password" th:field="*{currentPassword}" class="form-control" id="currentPassword" placeholder="enter current password" />
+                    <div th:replace="fragments::backendValidationErrors('currentPassword')"></div>
                 </div>
                 <div class="form-group">
                     <label for="newPassword">New Password:</label>
-                    <input type="password" th:field="*{password}" class="form-control" id="newPassword" placeholder="enter new password" /><!--required-->
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">new password Error</span>
+                    <input type="password" th:field="*{password}" class="form-control" id="newPassword" placeholder="enter new password" />
+                    <div th:replace="fragments::backendValidationErrors('password')"></div>
                 </div>
                 <div class="form-group">
                     <label for="newPasswordConfirm">Confirm New Password:</label>
-                    <input type="password" th:field="*{matchingPassword}" class="form-control" id="newPasswordConfirm" placeholder="confirm new password" /><!--required-->
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                    <span th:if="${#fields.hasErrors('matchingPassword')}" th:errors="*{matchingPassword}">confirm password Error</span>
+                    <input type="password" th:field="*{matchingPassword}" class="form-control" id="newPasswordConfirm" placeholder="confirm new password" />
+                    <div th:replace="fragments::backendValidationErrors('matchingPassword')"></div>
                 </div>
                 <button th:replace="fragments::saveButton"></button>
             </form>
+
+            <!--
+
+             FULL VALIDATION
+
+            <form class="needs-validation" novalidate th:action="@{/user/changePassword}" th:object="${formPassword}" method="POST" action="#">
+                <div class="form-group">
+                    <label for="currentPassword">Current Password:</label>
+                    <input type="password" th:field="*{currentPassword}" class="form-control" id="currentPassword" placeholder="enter current password" required/>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <div th:replace="fragments::backendValidationErrors('currentPassword')"></div>
+                </div>
+                <div class="form-group">
+                    <label for="newPassword">New Password:</label>
+                    <input type="password" th:field="*{password}" class="form-control" id="newPassword" placeholder="enter new password" required/>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <div th:replace="fragments::backendValidationErrors('password')"></div>
+                </div>
+                <div class="form-group">
+                    <label for="newPasswordConfirm">Confirm New Password:</label>
+                    <input type="password" th:field="*{matchingPassword}" class="form-control" id="newPasswordConfirm" placeholder="confirm new password" required/>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <div th:replace="fragments::backendValidationErrors('matchingPassword')"></div>
+                </div>
+                <button th:replace="fragments::saveButton"></button>
+            </form>
+
+            -->
 
         </div>
         <footer th:replace="fragments::footer"></footer>
