--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -100,6 +100,16 @@
                 <a class="btn btn-outline-info btn-sm my-2 btn-block" th:href="@{/{param1}/{param2}(param1=${subject},param2=${action})}">Purchase</a>
             </div>
 
+
+            <!--backend errors-->
+            <div th:fragment="backendValidationErrors(field)" class="mt-1" th:if="${#fields.hasErrors(field)}">
+                <div class="alert alert-danger alert-dismissible fade show mb-1" th:each="error : ${#fields.errors(field)}">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    <strong>Error: </strong><span th:text="${error}"></span>
+                </div>
+            </div>
+
+
             <div class="row" th:fragment="footer">
                 <div class="col-sm-12">
                     <footer class="bg-light text-center">
