--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -12,39 +12,39 @@
             </ul>
             <h3>New User</h3>
 
+            <!-- BACKEND-ONLY VALIDATION -->
 
             <form action="#" th:action="@{/newUser}" th:object="${formUser}" method="POST">
-                <div th:if="${#fields.hasErrors()}">
-                    <span>Please correct the problems below and resubmit.</span>
-                </div>
                 <div class="form-group">
                     <label for="email">E-mail:</label>
                     <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="enter email">
-                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error</span>
+                    <div th:replace="fragments::backendValidationErrors('email')"></div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
                     <input type="text" th:field="*{password}" class="form-control" id="password" placeholder="enter password">
-                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>
+                    <div th:replace="fragments::backendValidationErrors('password')"></div>
                 </div>
                 <div class="form-group">
                     <label for="matchingPassword">Confirm Password:</label>
                     <input type="text" th:field="*{matchingPassword}" class="form-control" id="matchingPassword" placeholder="confirm password">
-                    <span th:if="${#fields.hasErrors('matchingPassword')}" th:errors="*{matchingPassword}">matchingPassword Error</span>
+                    <div th:replace="fragments::backendValidationErrors('matchingPassword')"></div>
                 </div>
                 <div class="form-group">
                     <label for="firstName">First Name:</label>
                     <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="enter firstName">
-                    <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">firstName Error</span>
+                    <div th:replace="fragments::backendValidationErrors('firstName')"></div>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last Name:</label>
                     <input type="text" th:field="*{lastName}" class="form-control" id="lastName" placeholder="enter lastName">
-                    <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName Error</span>
+                    <div th:replace="fragments::backendValidationErrors('lastName')"></div>
                 </div>
                 <button th:replace="fragments::saveButton"></button>
             </form>
 
+
+            <!-- FULL VALIDATION -->
 
             <!--<form action="#" th:action="@{/newUser}" th:object="${user}" method="POST" class="needs-validation" novalidate>
                 <div class="ServerValidationError" th:if="${#fields.hasErrors()}">
