--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -12,16 +12,15 @@
             </ul>
             <h3>Edit Profile</h3>
             <form class="needs-validation" novalidate th:action="@{/user/editProfile}" th:object="${profile}" method="POST" action="#">
-                <div th:if="${#fields.hasErrors()}">
-                    <span>Please correct the problems below and resubmit.</span>
-                </div>
                 <div class="form-group">
                     <label for="firstName">First Name:</label>
                     <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="enter firstName">
+                    <div th:replace="fragments::backendValidationErrors('firstName')"></div>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last Name:</label>
                     <input type="text" th:field="*{lastName}" class="form-control" id="lastName" placeholder="enter lastName">
+                    <div th:replace="fragments::backendValidationErrors('lastName')"></div>
                 </div>
                 <button th:replace="fragments::saveButton"></button>
             </form>
