--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -12,15 +12,66 @@
                 <li class="breadcrumb-item active">New Book</li>
             </ul>
             <h3>New Book</h3>
+
+            <!-- BACKEND-ONLY VALIDATION -->
+
+            <form th:action="@{/admin/newBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
+                <div class="form-group">
+                    <label for="isbn">ISBN:</label>
+                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn">
+                    <div th:replace="fragments::backendValidationErrors('isbn')"></div>
+                </div>
+                <div class="form-group">
+                    <label for="title">Title:</label>
+                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title">
+                    <div th:replace="fragments::backendValidationErrors('title')"></div>
+                </div>
+                <div class="form-group">
+                    <label for="category">Category:</label>
+                    <select class="custom-select" th:field="*{category.id}" id="category">
+                        <option th:each="ic : ${indentedCategories}"
+                                th:value="${ic.id}"
+                                th:text="${ic.name}">
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="input1">Image:</label>
+                    <select class="custom-select" id="input1" name="storedImageId">
+                        <option th:each="imageInfo : ${imagesInfo}"
+                                th:value="${imageInfo.id}"
+                                th:text="${imageInfo.name}">
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="switch">select new image:</label>
+                    <input type="checkbox" id="switch" onclick="binaryInputSwitch()"/>
+                    <input class="form-control" type="file" th:field="*{image}" id="input2" disabled />
+                </div>
+                <button th:replace="fragments::saveButton"></button>
+            </form>
+        </div>
+        <footer th:replace="fragments::footer"></footer>
+        <!--<script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>-->
+        <script th:replace="fragments::binaryInputSwitch"></script>
+    </body>
+
+<!--
+<body>
+        <header th:replace="fragments::header"></header>
+        <div class="container">
+            <ul class="breadcrumb my-2">
+                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
+                <li class="breadcrumb-item"><a th:href="@{/admin/books}">Books</a></li>
+                <li class="breadcrumb-item active">New Book</li>
+            </ul>
+            <h3>New Book</h3>
             <form class="needs-validation" novalidate th:action="@{/admin/newBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
-                <!--<div class="ServerValidationError" th:if="${#fields.hasErrors()}">
-                    <span>Please correct the problems below and resubmit.</span>
-                </div>-->
                 <div class="form-group">
                     <label for="isbn">ISBN:</label>
                     <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required>
                     <div class="invalid-feedback">Please fill out this field.</div>
-                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}">Error</span>-->
                 </div>
                 <div class="form-group">
                     <label for="title">Title:</label>
@@ -58,4 +109,7 @@
         <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
         <script th:replace="fragments::binaryInputSwitch"></script>
     </body>
+-->
+
+
 </html>
