--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -12,10 +12,42 @@
                 <li class="breadcrumb-item active">New Category</li>
             </ul>
             <h3>New Category</h3>
+
+            <!-- BACKEND-ONLY VALIDATION -->
+
+            <form th:action="@{/admin/newCategory}" th:object="${category}" method="POST" action="#">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="enter name" />
+                    <div th:replace="fragments::backendValidationErrors('name')"></div>
+                </div>
+                <div class="form-group">
+                    <label for="parent">Nested under:</label>
+                    <select th:field="*{parent.id}" class="custom-select" id="parent">
+                        <option th:each="ic : ${indentedCategories}"
+                                th:value="${ic.id}"
+                                th:text="${ic.name}">
+                        </option>
+                    </select>
+                </div>
+                <button th:replace="fragments::saveButton"></button>
+            </form>
+        </div>
+        <footer th:replace="fragments::footer"></footer>
+        <!--<script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>-->
+    </body>
+
+<!--
+<body>
+        <header th:replace="fragments::header"></header>
+        <div class="container">
+            <ul class="breadcrumb my-2">
+                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
+                <li class="breadcrumb-item"><a th:href="@{/admin/categories}">Categories</a></li>
+                <li class="breadcrumb-item active">New Category</li>
+            </ul>
+            <h3>New Category</h3>
             <form action="#" th:action="@{/admin/newCategory}" th:object="${category}" method="POST" class="needs-validation" novalidate>
-                <!--<div class="ServerValidationError" th:if="${#fields.hasErrors()}">
-                    <span>Please correct the problems below and resubmit.</span>
-                </div>-->
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="enter name" name="name" required>
@@ -36,4 +68,7 @@
         <footer th:replace="fragments::footer"></footer>
         <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
     </body>
+
+-->
+
 </html>
