--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -12,9 +12,7 @@
                 <li class="breadcrumb-item active">Edit Book</li>
             </ul>
             <h3>Edit Book</h3>
-
-            <!-- BACKEND-ONLY VALIDATION -->
-
+            <!-- BACKEND-ONLY VALIDATION
             <form th:action="@{/admin/editBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
                 <input type="hidden" th:field="*{id}"/>
                 <div class="form-group">
@@ -53,68 +51,52 @@
                     <div th:replace="fragments::backendValidationErrors('image')"></div>
                 </div>
                 <button th:replace="fragments::saveButton"></button>
+            </form>-->
+            <form class="needs-validation" novalidate th:action="@{/admin/editBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
+                <input type="hidden" th:field="*{id}"/>
+                <div class="form-group">
+                    <label for="isbn">ISBN:</label>
+                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" th:pattern="${isbnPattern}" required>
+                    <div class="invalid-feedback">Please fill out this field with a valid ISBN</div>
+                    <div th:replace="fragments::backendValidationErrors('isbn')"></div>
+                </div>
+                <div class="form-group">
+                    <label for="title">Title:</label>
+                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" th:pattern="${basicTextPattern}">
+                    <div class="invalid-feedback">Please fill out this field correctly</div>
+                    <div th:replace="fragments::backendValidationErrors('title')"></div>
+                </div>
+                <div class="form-group">
+                    <label for="category">Category:</label>
+                    <select class="custom-select" th:field="*{category.id}" id="category">
+                        <option th:each="ic : ${indentedCategories}"
+                                th:value="${ic.id}"
+                                th:text="${ic.name}">
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="input1">Image:</label>
+                    <select class="custom-select" id="input1" name="storedImageId">
+                        <option th:each="imageInfo : ${imagesInfo}"
+                                th:value="${imageInfo.id}"
+                                th:text="${imageInfo.name}"
+                                th:selected="${imageInfo.id==bookImageId}">
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="switch">select new image:</label>
+                    <input type="checkbox" id="switch" onclick="binaryInputSwitch()"/>
+                    <input class="form-control" type="file" th:field="*{image}" id="input2" disabled accept="image/*" required/>
+                    <div class="invalid-feedback">Please select an image</div>
+                    <div th:replace="fragments::backendValidationErrors('image')"></div>
+                </div>
+                <button th:replace="fragments::saveButton"></button>
             </form>
         </div>
         <footer th:replace="fragments::footer"></footer>
-        <!--<script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>-->
+        <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
         <script th:replace="fragments::binaryInputSwitch"></script>
     </body>
-
-
-<!--
-<body>
-        <header th:replace="fragments::header"></header>
-        <div class="container">
-            <ul class="breadcrumb my-2">
-                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
-                <li class="breadcrumb-item"><a th:href="@{/admin/books}">Books</a></li>
-                <li class="breadcrumb-item active">Edit Book</li>
-            </ul>
-            <h3>Edit Book</h3>
-            <form class="needs-validation" novalidate th:action="@{/admin/editBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
-
-    <input type="hidden" th:field="*{id}"/>
-    <div class="form-group">
-        <label for="isbn">ISBN:</label>
-        <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required>
-        <div class="invalid-feedback">Please fill out this field.</div>
-    </div>
-    <div class="form-group">
-        <label for="title">Title:</label>
-        <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" required>
-        <div class="invalid-feedback">Please fill out this field.</div>
-    </div>
-    <div class="form-group">
-        <label for="category">Category:</label>
-        <select class="custom-select" th:field="*{category.id}" id="category">
-            <option th:each="ic : ${indentedCategories}"
-                    th:value="${ic.id}"
-                    th:text="${ic.name}">
-            </option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="input1">Image:</label>
-        <select class="custom-select" id="input1" name="storedImageId">
-            <option th:each="imageInfo : ${imagesInfo}"
-                    th:value="${imageInfo.id}"
-                    th:text="${imageInfo.name}"
-                    th:selected="${imageInfo.id==book.image.id}">
-            </option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="switch">select new image:</label>
-        <input type="checkbox" id="switch" onclick="binaryInputSwitch()"/>
-        <input class="form-control" type="file" th:field="*{image}" id="input2" disabled required/>
-    </div>
-    <button th:replace="fragments::saveButton"></button>
-    </form>
-    </div>
-    <footer th:replace="fragments::footer"></footer>
-    <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
-    <script th:replace="fragments::binaryInputSwitch"></script>
-    </body>
--->
-
 </html>
