--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -12,9 +12,7 @@
                 <li class="breadcrumb-item active">New Book</li>
             </ul>
             <h3>New Book</h3>
-
-            <!-- BACKEND-ONLY VALIDATION -->
-
+            <!-- BACKEND-ONLY VALIDATION
             <form th:action="@{/admin/newBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
                 <div class="form-group">
                     <label for="isbn">ISBN:</label>
@@ -52,32 +50,19 @@
                 </div>
                 <button th:replace="fragments::saveButton"></button>
             </form>
-        </div>
-        <footer th:replace="fragments::footer"></footer>
-        <!--<script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>-->
-        <script th:replace="fragments::binaryInputSwitch"></script>
-    </body>
-
-<!--
-<body>
-        <header th:replace="fragments::header"></header>
-        <div class="container">
-            <ul class="breadcrumb my-2">
-                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
-                <li class="breadcrumb-item"><a th:href="@{/admin/books}">Books</a></li>
-                <li class="breadcrumb-item active">New Book</li>
-            </ul>
-            <h3>New Book</h3>
+            -->
             <form class="needs-validation" novalidate th:action="@{/admin/newBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
                 <div class="form-group">
                     <label for="isbn">ISBN:</label>
-                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required>
-                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" th:pattern="${isbnPattern}" required>
+                    <div class="invalid-feedback">Please fill out this field with a valid ISBN</div>
+                    <div th:replace="fragments::backendValidationErrors('isbn')"></div>
                 </div>
                 <div class="form-group">
                     <label for="title">Title:</label>
-                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" required>
-                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" th:pattern="${basicTextPattern}">
+                    <div class="invalid-feedback">Please fill out this field correctly</div>
+                    <div th:replace="fragments::backendValidationErrors('title')"></div>
                 </div>
                 <div class="form-group">
                     <label for="category">Category:</label>
@@ -100,8 +85,9 @@
                 <div class="form-group">
                     <label for="switch">select new image:</label>
                     <input type="checkbox" id="switch" onclick="binaryInputSwitch()"/>
-                    <input class="form-control" type="file" th:field="*{image}" id="input2" disabled required/>
-                    <div class="invalid-feedback">Please select an image.</div>
+                    <input class="form-control" type="file" th:field="*{image}" id="input2" disabled accept="image/*" required/>
+                    <div class="invalid-feedback">Please select an image</div>
+                    <div th:replace="fragments::backendValidationErrors('image')"></div>
                 </div>
                 <button th:replace="fragments::saveButton"></button>
             </form>
@@ -110,7 +96,4 @@
         <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
         <script th:replace="fragments::binaryInputSwitch"></script>
     </body>
--->
-
-
 </html>
