--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -11,9 +11,7 @@
                 <li class="breadcrumb-item active">New User</li>
             </ul>
             <h3>New User</h3>
-
-            <!-- BACKEND-ONLY VALIDATION -->
-
+            <!-- BACKEND-ONLY VALIDATION
             <form th:action="@{/newUser}" th:object="${formUser}" method="POST" action="#">
                 <div class="form-group">
                     <label for="email">E-mail:</label>
@@ -41,46 +39,41 @@
                     <div th:replace="fragments::backendValidationErrors('lastName')"></div>
                 </div>
                 <button th:replace="fragments::saveButton"></button>
-            </form>
-
-
+            </form>-->
             <!-- FULL VALIDATION -->
-
-            <!--<form action="#" th:action="@{/newUser}" th:object="${user}" method="POST" class="needs-validation" novalidate>
-                <div class="ServerValidationError" th:if="${#fields.hasErrors()}">
-                    <span>Please correct the problems below and resubmit.</span>
-                </div>
+            <form class="needs-validation" novalidate th:action="@{/newUser}" th:object="${formUser}" method="POST" action="#">
                 <div class="form-group">
                     <label for="email">E-mail:</label>
-                    <input type="email" th:field="*{email}" class="form-control" id="email" placeholder="enter email" required>
-                    <div class="invalid-feedback">Please fill out this field with your email.</div>
-                    <span class="ServerValidationError" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error</span>
+                    <input class="form-control" type="email" th:field="*{email}" id="email" placeholder="enter email" th:pattern="${emailPattern}">
+                    <div class="invalid-feedback">Please fill out this field with your email</div>
+                    <div th:replace="fragments::backendValidationErrors('email')"></div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" th:field="*{password}" class="form-control" id="password" placeholder="enter password" required>
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                    <span class="ServerValidationError" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>
+                    <input class="form-control" type="password" th:field="*{password}" id="password" placeholder="enter password">
+                    <div th:replace="fragments::backendValidationErrors('password')"></div>
                 </div>
-                 TODO: confirm password functionality
+                <div class="form-group">
+                    <label for="matchingPassword">Confirm Password:</label>
+                    <input class="form-control" type="password" th:field="*{matchingPassword}" id="matchingPassword" placeholder="confirm password">
+                    <div th:replace="fragments::backendValidationErrors('matchingPassword')"></div>
+                </div>
                 <div class="form-group">
                     <label for="firstName">First Name:</label>
-                    <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="enter firstName" required>
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                    <span class="ServerValidationError" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">firstName Error</span>
+                    <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${basicTextPattern}">
+                    <div class="invalid-feedback">Please fill out this field correctly</div>
+                    <div th:replace="fragments::backendValidationErrors('firstName')"></div>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last Name:</label>
-                    <input type="text" th:field="*{lastName}" class="form-control" id="lastName" placeholder="enter lastName" required>
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                    <span class="ServerValidationError" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName Error</span>
+                    <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${basicTextPattern}">
+                    <div class="invalid-feedback">Please fill out this field correctly</div>
+                    <div th:replace="fragments::backendValidationErrors('lastName')"></div>
                 </div>
                 <button th:replace="fragments::saveButton"></button>
-            </form>-->
-
-
+            </form>
         </div>
         <footer th:replace="fragments::footer"></footer>
-        <!--<script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>-->
+        <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
     </body>
 </html>
