--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -39,7 +39,7 @@
                 <input type="hidden" th:field="*{parent.name}"/>
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input class="form-control" type="text" th:field="*{name}" id="name" placeholder="enter name" th:pattern="${basicTextPattern}">
+                    <input class="form-control" type="text" th:field="*{name}" id="name" placeholder="enter name" th:pattern="${textBasicPattern}">
                     <div class="invalid-feedback">Please fill out this field correctly</div>
                     <div th:replace="fragments::backendValidationErrors('name')"></div>
                 </div>
