--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -44,29 +44,31 @@
             <form class="needs-validation" novalidate th:action="@{/newUser}" th:object="${formUser}" method="POST" action="#">
                 <div class="form-group">
                     <label for="email">E-mail:</label>
-                    <input class="form-control" type="email" th:field="*{email}" id="email" placeholder="enter email" th:pattern="${emailPattern}">
+                    <input class="form-control" type="email" th:field="*{email}" id="email" placeholder="enter email" required th:pattern="${emailPattern}">
                     <div class="invalid-feedback">Please fill out this field with your email</div>
                     <div th:replace="fragments::backendValidationErrors('email')"></div>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input class="form-control" type="password" th:field="*{password}" id="password" placeholder="enter password">
+                    <label for="newPassword">Password:</label>
+                    <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter password" required th:pattern="${passwordPattern}" th:title="#{password.invalidFormat}"/>
+                    <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
                     <div th:replace="fragments::backendValidationErrors('password')"></div>
                 </div>
                 <div class="form-group">
-                    <label for="matchingPassword">Confirm Password:</label>
-                    <input class="form-control" type="password" th:field="*{matchingPassword}" id="matchingPassword" placeholder="confirm password">
+                    <label for="newPasswordConfirm">Confirm Password:</label>
+                    <input class="form-control" type="password" th:field="*{matchingPassword}" id="newPasswordConfirm" placeholder="confirm password" required pattern=".*" title="Please enter the same password as above"/>
+                    <div class="invalid-feedback" th:text="#{password.notMatching}">Please enter the same password as above</div>
                     <div th:replace="fragments::backendValidationErrors('matchingPassword')"></div>
                 </div>
                 <div class="form-group">
                     <label for="firstName">First Name:</label>
-                    <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${basicTextPattern}">
+                    <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${textBasicPattern}">
                     <div class="invalid-feedback">Please fill out this field correctly</div>
                     <div th:replace="fragments::backendValidationErrors('firstName')"></div>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last Name:</label>
-                    <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${basicTextPattern}">
+                    <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${textBasicPattern}">
                     <div class="invalid-feedback">Please fill out this field correctly</div>
                     <div th:replace="fragments::backendValidationErrors('lastName')"></div>
                 </div>
@@ -74,6 +76,7 @@
             </form>
         </div>
         <footer th:replace="fragments::footer"></footer>
+        <script th:replace="fragments::matchingPasswords"></script>
         <script th:replace="fragments::disableFormSubmissionOnInvalidField"></script>
     </body>
 </html>
