--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -174,6 +174,50 @@
             }
         </script>
 
+        <!-- computes the checksum digit and alerts if an error is detected -->
+        <script th:fragment="isbnChecksum">
+            document.addEventListener("DOMContentLoaded", function() {
+                document.getElementById("isbnForm").addEventListener('submit', function() {
+                        var isbn = document.getElementById("isbn");
+                        if (isbn.checkValidity()) {
+                            // Remove non ISBN digits, then split into an array
+                            var chars = isbn.value.replace(/[- ]|^ISBN(?:-1[03])?:?/g, "").split("");
+                            // Remove the final ISBN digit from `chars`, and assign it to `last`
+                            var last = chars.pop();
+                            var sum = 0;
+                            var check, i;
+                            if (chars.length == 9) {
+                                // Compute the ISBN-10 check digit
+                                chars.reverse();
+                                for (i = 0; i < chars.length; i++) {
+                                    sum += (i + 2) * parseInt(chars[i], 10);
+                                }
+                                check = 11 - (sum % 11);
+                                if (check == 10) {
+                                    check = "X";
+                                } else if (check == 11) {
+                                    check = "0";
+                                }
+                            } else {
+                                // Compute the ISBN-13 check digit
+                                for (i = 0; i < chars.length; i++) {
+                                    sum += (i % 2 * 2 + 1) * parseInt(chars[i], 10);
+                                }
+                                check = 10 - (sum % 10);
+                                if (check == 10) {
+                                    check = "0";
+                                }
+                            }
+                            if (check != last) {
+                                alert("Error: Invalid ISBN checksum digit (" + last + "). Try with (" + check + ")");
+                                isbn.focus();
+                                isbn.value = isbn.value.substring(0, isbn.value.length - 1);
+                            }
+                        }
+                    }, false);
+            }, false);
+        </script>
+
     </body>
 
 </html>
